--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=Crix
 
-server.port=3200
+server.port=8080
 
 
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
 spring.jpa.hibernate.ddl-auto=update
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.http.converter.json=DEBUG
 logging.level.com.fasterxml.jackson=DEBUG
@@ -43,8 +45,12 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2MB
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
+spring.datasource.url=jdbc:postgresql://ep-crimson-king-a5wuxq25.us-east-2.aws.neon.tech/cricket_app?sslmode=require
+spring.datasource.username=cricket_app_owner
+spring.datasource.password=c3vdwaXrS0RH
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cricket_app
-spring.datasource.username=root
-spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
 
